Implement JWT authentication in backend with controller to endpoint /api/v1/auth/token